# tfc-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/tfc_cli/: cli.py  client.py  config.py  mcp_server.py  models.py
src/tfc_cli/commands/: applies.py  config_cmd.py  orgs.py  plans.py  projects.py  runs.py  state.py  teams.py  variables.py  varsets.py  workspaces.py
