[project]
name = "tfc-cli"
version = "0.1.0"
description = "CLI tool for Terraform Cloud API operations"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.12.5",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.scripts]
tfc = "tfc_cli.cli:cli"
tfc-mcp = "tfc_cli.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfc_cli"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "ERA",    # eradicate (commented-out code)
    "PIE",    # flake8-pie
    "T20",    # flake8-print (catch stray prints)
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
]
ignore = [
    "T201",   # allow click.echo / print in CLI tool
    "RET505", # allow else after return
]

[tool.ruff.lint.isort]
known-first-party = ["tfc_cli"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
